mysql-chart/templates/mysql-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: k8s-mysql
  labels:
    name: k8s-mysql
spec:
  containers:
  - name: mysql
    image: mysql:latest
    ports:
    - name: mysql
      containerPort: 3306
      protocol: TCP
    volumeMounts:
    - name: k8s-mysql-storage
      mountPath: /var/lib/mysql
  volumes:
  - name: k8s-mysql-storage
    emptyDir: {}
