mysql-chart/templates/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    name: mysql-service
spec:
  ports:
  - port: 3306
  selector:
    name: k8s-mysql
  type: ClusterIP
