mysql-chart/templates/mysql-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mysql
spec:
  rules:
  - host: mysql.devops6.ru
    http:
      paths:
       - path: /
         pathType: Prefix
         backend:
           service: 
              name: mysql-service
              port:
                number: 3306
